[package]
name = "sendpacket"
version = "0.1.0"
authors = [
  "Alex Lloyd <alex.lloyd@metaswitch.com>",
  "Blake Hawkins <blake.hawkins@metaswitch.com>",
  "Jaime Valdemoros Gomez <jaime.valdemorosgomez@metaswitch.com>",
  "James Turner <james.turner@metaswitch.com>",
  "Ryan Collingham <ryan.collingham@metaswitch.com>",
  "Sophie Stratton <sophie.stratton@metaswitch.com>",
  "Wojciech Kozlowski <wojciech.kozlowski@metaswitch.com>",
]

[lib]
name = "lib_sendpacket"
path = "src/lib.rs"

[dependencies]
derive-new = "0.5"
ipnetwork = "0.12.8"
pnet = "0.21.0"
